initial commit of Java rules implementation